# aitest

./: .gitignore  Cargo.toml  add.sh  clippy.sh  run.sh  test.sh  udeps.sh  upgrade.sh
src/: error.rs  lib.rs  main.rs  srv.rs  store.rs
tests/: mcp_test.rs
