[package]
name = "aitest"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.16.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
schemars = "1.2"
thiserror = "2.0.18"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to increase optimization
panic = "abort"     # Remove panic unwinding
strip = true        # Strip symbols from binary
