[package]
name = "aitest"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.3.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1.51", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
schemars = "1.2"
thiserror = "2.0.18"
sonic-rs = "0.5.8"
tantivy = "0.26.0"
tantivy-jieba = "0.19.0"
directories = "6.0.0"
uuid = { version = "1.23.0", features = ["v4"] }
log = "0.4.29"
log_init = "0.1.34"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to increase optimization
panic = "abort"     # Remove panic unwinding
strip = true        # Strip symbols from binary
