[package]
name = "aitest"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.3.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1.51", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
schemars = "1.2"
thiserror = "2.0.18"
sonic-rs = "0.5.8"
turso = { version = "0.6.0-pre.15" }
turso_core = { version = "0.6.0-pre.15", features = ["fts"] }
jieba-rs = "0.8.1"
directories = "6.0.0"
uuid = { version = "1.23.0", features = ["v4"] }
log = "0.4.29"
log_init = "0.1.34"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
